fixes for home merchandise bottom aligning breakpoints

--- a/www/views/home/home-merchandise/home-merchandise.scss
+++ b/www/views/home/home-merchandise/home-merchandise.scss
@@ -80,7 +80,7 @@
                     text-align: center;
                     display: flex;
                     justify-content: center;
-                    bottom: 51px;
+                    bottom: 25px;
                     span {
                         font-family: 'Apercu';
                         font-size: 30px;
